// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render 1`] = `
<DocumentFragment>
  <div
    class="sc-AxirZ laMNgs flex flex-col space-y-5 overflow-hidden border rounded-lg bg-theme-neutral-100 dark:bg-theme-neutral-800 border-theme-neutral-300 dark:border-theme-neutral-800 sm:space-y-0 sm:space-x-5 sm:flex-row"
  >
    <div
      class="flex items-center justify-center text-theme-warning-600"
    >
      <div
        class="sc-AxjAm fYfzg"
        height="1.75em"
        width="1.75em"
      >
        <svg>
          alert-warning.svg
        </svg>
      </div>
    </div>
    <span
      class="pointer-events-none border rounded-md border-theme-warning-600"
    />
    <div
      class="flex flex-col space-y-2"
    />
  </div>
</DocumentFragment>
`;

exports[`Alert should render a large one 1`] = `
<div>
  <div
    class="sc-AxirZ iJRAXo flex flex-col space-y-5 overflow-hidden border rounded-lg bg-theme-neutral-100 dark:bg-theme-neutral-800 border-theme-neutral-300 dark:border-theme-neutral-800 sm:space-y-0 sm:space-x-5 sm:flex-row"
  >
    <div
      class="flex items-center justify-center text-theme-warning-600"
    >
      <div
        class="sc-AxjAm fYfzg"
        height="1.75em"
        width="1.75em"
      >
        <svg>
          alert-warning.svg
        </svg>
      </div>
    </div>
    <span
      class="pointer-events-none border rounded-md border-theme-warning-600"
    />
    <div
      class="flex flex-col space-y-2"
    />
  </div>
</div>
`;

exports[`Alert should render a small one 1`] = `
<div>
  <div
    class="sc-AxirZ fxcyOH flex flex-col space-y-5 overflow-hidden border rounded-lg bg-theme-neutral-100 dark:bg-theme-neutral-800 border-theme-neutral-300 dark:border-theme-neutral-800 sm:space-y-0 sm:space-x-5 sm:flex-row"
  >
    <div
      class="flex items-center justify-center text-theme-warning-600"
    >
      <div
        class="sc-AxjAm fYfzg"
        height="1.75em"
        width="1.75em"
      >
        <svg>
          alert-warning.svg
        </svg>
      </div>
    </div>
    <span
      class="pointer-events-none border rounded-md border-theme-warning-600"
    />
    <div
      class="flex flex-col space-y-2"
    />
  </div>
</div>
`;
